<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>app.zcat.infochat</groupId>
    <artifactId>infochat-parent</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <modules>
        <module>infochat-core</module>
        <module>infochat-ssrf</module>
        <module>infochat-llm-adapter</module>
        <module>infochat-messaging-adapter</module>
        <module>infochat-collector</module>
        <module>infochat-provider</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.compiler.release>25</maven.compiler.release>
        <quarkus.platform.version>3.33.1.1</quarkus.platform.version>
    </properties>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>io.quarkus.platform</groupId>
                <artifactId>quarkus-bom</artifactId>
                <version>${quarkus.platform.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--
                 infochat-core is the reactor-local shared SPI module.
                 Listing it here keeps downstream module POMs version-less
                 (preserves the M1-001 BOM-managed-versions invariant).
            -->
            <dependency>
                <groupId>app.zcat.infochat</groupId>
                <artifactId>infochat-core</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--
                 infochat-ssrf is the shared SSRF-gated outbound HTTP/WS
                 client module. Both Collector (every feed fetch + future
                 StreamSource connect) and Provider (every /add-source URL
                 probe) depend on it. Same reactor-local pattern: management
                 here keeps consumers version-less per the M1-001 invariant.
            -->
            <dependency>
                <groupId>app.zcat.infochat</groupId>
                <artifactId>infochat-ssrf</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--
                 infochat-llm-adapter is the LLM-side SPI module (LlmProvider,
                 EmbeddingProvider). Same reactor-local pattern as infochat-core:
                 management here keeps consumers (collector, provider, future
                 impl modules) version-less.
            -->
            <dependency>
                <groupId>app.zcat.infochat</groupId>
                <artifactId>infochat-llm-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--
                 infochat-messaging-adapter is the Provider-side presentation-layer
                 SPI module (MessagingAdapter, TranslationProvider, ProgressNotifier).
                 Same reactor-local pattern: management here keeps the Provider
                 consumer and future messaging-impl modules version-less.
            -->
            <dependency>
                <groupId>app.zcat.infochat</groupId>
                <artifactId>infochat-messaging-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <!--
         JSpecify nullness annotations (@NonNull, @Nullable) are declared
         at parent level so every reactor module inherits them automatically
         without re-declaring per child pom. Compile-time only (provided
         scope) — not on the runtime classpath, so modules that don't use
         the annotations pay only a tiny compile-time cost. Keeps the
         M1-001 BOM-managed-versions invariant: child POMs remain
         version-less (they don't list JSpecify at all).
    -->
    <dependencies>
        <dependency>
            <groupId>org.jspecify</groupId>
            <artifactId>jspecify</artifactId>
            <version>1.0.0</version>
            <scope>provided</scope>
        </dependency>
    </dependencies>

    <!--
         NullAway + Error Prone static nullness enforcement (decision D48).
         Declared in <pluginManagement> so every reactor module inherits the
         full annotation-processor + compilerArgs configuration and opts in
         with a minimal activation stanza (the plugin coordinates only, no
         <configuration>) in its own <build><plugins>. Modules are onboarded
         one at a time (subtickets M1-164b..f); a module that has not yet
         added the activation stanza compiles exactly as before.

         NullAway treats app.zcat.infochat as @NonNull-by-default
         (AnnotatedPackages); genuinely-nullable parameters, returns, and
         fields carry @Nullable (JSpecify). No @NonNull is written — non-null
         is the default.
    -->
    <build>
        <pluginManagement>
            <plugins>
                <!--
                     maven-enforcer-plugin: version managed here (M1-001
                     BOM-managed-versions invariant); the module-DAG ban
                     execution + bannedDependencies rule is activated in
                     infochat-collector/pom.xml only. Build-time plugin —
                     no effect on shipped runtime artifacts.
                -->
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-enforcer-plugin</artifactId>
                    <version>3.5.0</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.13.0</version>
                    <configuration>
                        <!--
                             Error Prone needs deep reflective access into the
                             javac internals; <fork>true</fork> runs javac in a
                             child JVM so the -J add-exports / add-opens args
                             below reach the compiler rather than this Maven JVM.
                        -->
                        <fork>true</fork>
                        <annotationProcessorPaths>
                            <path>
                                <groupId>com.google.errorprone</groupId>
                                <artifactId>error_prone_core</artifactId>
                                <version>2.42.0</version>
                            </path>
                            <path>
                                <groupId>com.uber.nullaway</groupId>
                                <artifactId>nullaway</artifactId>
                                <version>0.10.25</version>
                            </path>
                        </annotationProcessorPaths>
                        <compilerArgs>
                            <arg>-XDcompilePolicy=simple</arg>
                            <arg>--should-stop=ifError=FLOW</arg>
                            <!--
                                 The Error Prone + NullAway flags MUST share a
                                 single <arg> element. Splitting them makes the
                                 compiler plugin pass them as separate javac
                                 arguments and the ErrorProne plugin never sees
                                 the -XepOpt/-Xep flags (NullAway silently does
                                 not run). ExcludedFieldAnnotations exempts
                                 framework-initialized fields from the field-init
                                 check: @Inject (CDI) and @ConfigProperty
                                 (MicroProfile Config) are field-level so the
                                 exemption matches directly. @PostConstruct is a
                                 method annotation, so a field initialized inside
                                 a @PostConstruct method is NOT matched by this
                                 list — those fields carry
                                 @SuppressWarnings("NullAway.Init") at the
                                 declaration instead (which suppresses only the
                                 init check, keeping the @NonNull dereference
                                 contract). -XepExcludedPaths drops generated
                                 sources (Quarkus build output) from analysis.
                            -->
                            <arg>-Xplugin:ErrorProne -XepOpt:NullAway:AnnotatedPackages=app.zcat.infochat -XepOpt:NullAway:ExcludedFieldAnnotations=jakarta.inject.Inject,jakarta.annotation.PostConstruct,org.eclipse.microprofile.config.inject.ConfigProperty -XepExcludedPaths:.*/target/generated-sources/.* -Xep:NullAway:ERROR -Xep:MissingOverride:ERROR -Xep:ReferenceEquality:ERROR -Xep:FallThrough:ERROR -Xep:MissingCasesInEnumSwitch:ERROR -Xep:DefaultCharset:ERROR -Xep:JdkObsolete:ERROR -Xep:FutureReturnValueIgnored:ERROR</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</arg>
                            <arg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</arg>
                            <arg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</arg>
                        </compilerArgs>
                    </configuration>
                </plugin>
            </plugins>
        </pluginManagement>
    </build>
</project>
